Fixed card scrollbar

--- a/usmanager/web-manager/src/components/list/PagedList.css
+++ b/usmanager/web-manager/src/components/list/PagedList.css
@@ -32,7 +32,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    top: 75px;
+    top: 70px;
     /*left: 100px;*/
     right: 0;
 }
